fern/products/waves/pages/v3.0.1/voice-cloning/how-to-delete-vc.mdx
---
title: "How to delete your Voice Clone using Python SDK"
icon: "compact-disc"
---

In this tutorial, you will learn how to use the Smallest AI platform to delete your voice clone. By the end of this tutorial, you will be able to clone your voice using our API.

You can access the source code for the Python SDK on our [GitHub repository](https://github.com/smallest-inc/smallest-python-sdk).

## Requirements

Before you begin, ensure you have the following:

- Python (3.9 or higher) installed on your machine.
- An API key from the Smallest AI platform (sign up [here](https://app.smallest.ai/dashboard/text-to-speech)).

## Setup

### Install our SDK
```bash
pip install smallestai
```

Set your API key as an environment variable. 
```bash
export SMALLEST_API_KEY=YOUR_API_KEY
``` 

## Delete your Voice
The Smallest AI SDK allows you to delete your cloned voice. This feature is available both synchronously and asynchronously, making it flexible for different use cases. Below are examples of how to use this functionality.

### Synchronously  

<CodeGroup> 
```python python 
from smallestai.waves import WavesClient

def main():
    client = WavesClient(api_key="SMALLEST_API_KEY")
    res = client.delete_voice(voice_id="voice_id")
    print(res)

if __name__ == "__main__":
    main()
```
</CodeGroup>   

### Asynchronously
<CodeGroup>
```python python
import asyncio
from smallestai.waves import AsyncWavesClient

async def main():
    client = AsyncWavesClient(api_key="SMALLEST_API_KEY")
    res = await client.delete_voice(voice_id="voice_id")
    print(res)

if __name__ == "__main__":
    asyncio.run(main())
```
</CodeGroup>  

## Parameters    

- `api_key`: Your API key (can be set via SMALLEST_API_KEY environment variable).
- `voice_id`: Unique Voice ID of the voice to be deleted.


If you have any questions or run into any issues, our community is here to help!   

- Join our [Discord server](https://discord.gg/9WtSXv26WE) to connect with other developers and get real-time support.  
- Reach out to our team via email: [support@smallest.ai](mailto:support@smallest.ai).
